--- a/grand-catalog/grand-catalog.html
+++ b/grand-catalog/grand-catalog.html
@@ -19,8 +19,15 @@
 
   <!-- Load D3 first (v7 or compatible) -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <!-- Load B3 Keys -->
+  <script src="../key/keys.js"></script>
+
+  <!-- Our SVG pan zoom logic-->
+  <script src="../lib/zoom-pan-lib.js"></script>
+
   <!-- Our SVG renderer logic (gradients + path rendering) -->
-  <script src="svg-renderer.js"></script>
+  <script src="../lib/svg-renderer.js"></script>
+
   <!-- The main script for fetching data + building the catalog -->
   <script src="grand-catalog.js"></script>
 </body>
