--- a/grand-catalog/grand-catalog.html
+++ b/grand-catalog/grand-catalog.html
@@ -20,7 +20,9 @@
   <!-- Load D3 first (v7 or compatible) -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <!-- Load B3 Keys -->
-  <script src="../key/keys.js"></script>
+  <script src="../configs/configs.js"></script>
+
+  <script src="../lib/api-utils.js"></script>
 
   <!-- Our SVG pan zoom logic-->
   <script src="../lib/zoom-pan-lib.js"></script>
