--- a/type-catalog/type-catalog.html
+++ b/type-catalog/type-catalog.html
@@ -10,6 +10,7 @@
   <header>
     <h1 id="type-title">Loading Type...</h1>
     <h2 id="type-info"></h2>
+    <a class="home-button" href="../grand-catalog/grand-catalog.html">Home</a>
   </header>
 
   <main id="type-grid">
@@ -17,8 +18,10 @@
   </main>
 
   <!-- Load B3 Keys -->
-  <script src="../key/keys.js"></script>
+  <script src="../configs/configs.js"></script>
 
+  <script src="../lib/api-utils.js"></script>
+  
   <!-- Our SVG pan zoom logic-->
   <script src="../lib/zoom-pan-lib.js"></script>
 
