--- a/single-part/single-part.html
+++ b/single-part/single-part.html
@@ -29,10 +29,10 @@
 
     <!-- Right: textual info -->
     <div class="right-column">
-      <h3>Raw JSON (part)</h3>
+      <h3>Raw API JSON (part)</h3>
       <pre id="json-output"></pre>
 
-      <h3>Raw JSON (color design)</h3>
+      <h3>Raw API JSON (color design)</h3>
       <pre id="color-json-output"></pre>
     </div>
   </main>
