--- a/ui-testing/test.html
+++ b/ui-testing/test.html
@@ -1,154 +1,68 @@
+<!-- templates/load_script.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Grand Catalog – GPerson</title>
-  <style>
-    /* Basic styling just to convey the row/column idea */
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #fafafa;
-    }
-
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-    }
-
-    header h2 {
-      margin: 5px 0 0;
-      font-weight: normal;
-      font-size: 20px;
-      color: #ddd;
-    }
-
-    main {
-      max-width: 1200px;
-      margin: 20px auto;
-      padding: 0 20px;
-    }
-
-    /* Each row for a specific GraphicalPartType */
-    .catalog-row {
-      margin: 40px 0;
-    }
-
-    .catalog-row h3 {
-      margin: 10px 0;
-      font-size: 18px;
-      color: #333;
-      text-transform: capitalize; /* e.g. "Capes" -> "Capes" */
-    }
-
-    /* The container for columns */
-    .catalog-grid {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr); /* 5 columns max */
-      gap: 20px;
-    }
-
-    /* Each cell for a single GraphicalPart */
-    .catalog-cell {
-      background-color: #fff;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      padding: 10px;
-      text-align: center;
-      min-height: 180px; /* Just to give some space */
-    }
-
-    .catalog-cell .svg-container {
-      width: 100%;
-      height: 130px;
-      border: 1px dashed #ccc;
-      margin-bottom: 5px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .catalog-cell p {
-      margin: 0;
-      font-size: 14px;
-      color: #666;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Load Protected Script</title>
 </head>
 <body>
+    <h1>Protected JavaScript Loader</h1>
+    <div id="content"></div>
 
-  <!-- Page Header -->
-  <header>
-    <h1>Grand Catalog</h1>
-    <h2>Animation Style: GPerson (ID 3)</h2>
-  </header>
+    <script>
+        async function loadProtectedScript(scriptName, accessCode = null) {
+            try {
+                // Construct the API URL
+                let url = `/api/scripts/${encodeURIComponent(scriptName)}/`;
 
-  <main>
-    <!-- Example row: "capes" as a GraphicalPartType -->
-    <div class="catalog-row" id="row-capes">
-      <h3>Capes</h3>
-      <div class="catalog-grid">
-        <!-- Example cells (up to 5) -->
-        <div class="catalog-cell">
-          <div class="svg-container">
-            <!-- We'll eventually insert D3-based inline SVG here -->
-            [SVG]
-          </div>
-          <p>Cape 1</p>
-        </div>
+                // Append access code as a query parameter if provided
+                if (accessCode) {
+                    url += `?access_code=${encodeURIComponent(accessCode)}`;
+                }
 
-        <div class="catalog-cell">
-          <div class="svg-container">
-            [SVG]
-          </div>
-          <p>Cape 2</p>
-        </div>
+                // Set up fetch options
+                const fetchOptions = {
+                    method: 'GET',
+                    headers: {}
+                };
 
-        <div class="catalog-cell">
-          <div class="svg-container">
-            [SVG]
-          </div>
-          <p>Cape 3</p>
-        </div>
+                // If using access codes via headers, add them
+                if (!accessCode) {
+                    // Replace with actual token retrieval logic
+                    const token = 'YOUR_AUTH_TOKEN';
+                    fetchOptions.headers['Authorization'] = `Bearer ${token}`;
+                }
 
-        <div class="catalog-cell">
-          <div class="svg-container">
-            [SVG]
-          </div>
-          <p>Cape 4</p>
-        </div>
+                // Fetch the script
+                const response = await fetch(url, fetchOptions);
 
-        <div class="catalog-cell">
-          <div class="svg-container">
-            [SVG]
-          </div>
-          <p>Cape 5</p>
-        </div>
-      </div>
-    </div>
+                if (!response.ok) {
+                    throw new Error(`Failed to load script: ${response.status} ${response.statusText}`);
+                }
 
-    <!-- Another row, e.g. "shirts" -->
-    <div class="catalog-row" id="row-shirts">
-      <h3>Shirts</h3>
-      <div class="catalog-grid">
-        <div class="catalog-cell">
-          <div class="svg-container">
-            [SVG]
-          </div>
-          <p>Shirt 1</p>
-        </div>
-        <!-- etc. up to 5 columns -->
-      </div>
-    </div>
+                // Get the script content
+                const scriptContent = await response.text();
 
-    <!-- Additional rows for other GraphicalPartTypes (Pants, etc.) -->
-  </main>
+                // Create a new script element
+                const script = document.createElement('script');
+                script.type = 'application/javascript';
+                script.text = scriptContent;
+
+                // Append the script to the body
+                document.body.appendChild(script);
+
+                console.log(`Script "${scriptName}" loaded successfully.`);
+            } catch (error) {
+                console.error(error);
+            }
+        }
+
+        // Example Usage:
+        // Using access codes
+        // loadProtectedScript('script1.js', 'YOUR_ACCESS_CODE');
+
+        // Using user authentication
+        loadProtectedScript('script2.js');
+    </script>
 </body>
 </html>
