--- a/editor-web-app-alpha/index.html
+++ b/editor-web-app-alpha/index.html
@@ -36,7 +36,7 @@
                 <div id="paramForm">
                     <p>Select an animation to edit parameters.</p>
                 </div>
-                <button id="applyParamsBtn" style="display:none;">Apply</button>
+                <button id="applyParamsBtn">Apply Parameters</button>
             </section>
         </aside>
 
@@ -116,6 +116,8 @@
     <svg id="hiddenSVG" width="400" height="250" style="display:none;"></svg>
 
     <!-- Main script -->
+    <script type="text/javascript" src="B3/wrapper.js"></script>
     <script type="module" src="js/main.js"></script>
+    
 </body>
 </html>
