--- a/single-part/single-part.html
+++ b/single-part/single-part.html
@@ -15,16 +15,20 @@
   <main class="split-container">
     <!-- Left: The big SVG area + reset button + thumbs up/down -->
     <div class="left-column">
-      <div id="big-svg-container"></div>
+      <div class="left-sticky">
+        <div id="big-svg-container"></div>
       
-      <button id="reset-view-btn">Reset View</button>
+        <button id="reset-view-btn">Reset View</button>
 
-      <div class="like-row">
-        <button id="like-button">&#128077;</button>
-        <button id="dislike-button">&#128078;</button>
+        <div class="like-row">
+          <button id="like-button">&#128077;</button>
+          <button id="dislike-button">&#128078;</button>
+        </div>
+
+        <div id="additional-info" class="additional-info"></div>
+
       </div>
-
-      <div id="additional-info" class="additional-info"></div>
+      
     </div>
 
     <!-- Right: textual info -->
