color list bug fix

--- a/single-part/single-part.html
+++ b/single-part/single-part.html
@@ -65,10 +65,18 @@
         </form>
       </section>
 
+      <section id="color-catalog" class="color-catalog">
+        <h3>Color Designs for This Part</h3>
+        <!-- NOTE: add `type-grid` here to reuse your catalog grid CSS -->
+        <div id="color-catalog-list" class="color-catalog-list type-grid"></div>
+      </section>
+
       <h3>Raw API JSON (part)</h3>
       <pre id="json-output"></pre>
       <h3>Raw API JSON (color design)</h3>
       <pre id="color-json-output"></pre>
+
+
     </div>
 
 
